# AbstractSemantics

./: ACKNOWLEDMENTS.md  CHANGELOD.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml
docs/: README.md  api.md  architecture.md  development.md  faq.md  getting-started.md  registry.md  schema.md
docs/backlog/proposed/: 2026-05-08_semantics_runtime_boundary.md  2026-05-08_semantics_scope_beyond_memory_open_question.md
docs/guide/semantics/: semantic-triple-prompt-v4-optimized.md
scripts/: generate_llms_full.py
src/abstractsemantics/: __init__.py  schema.py
