[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractsemantics"
version = "0.0.1"
description = "Semantics registry (predicates/types) for AbstractFramework."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Laurent-Philippe Albou" }]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["abstractsemantics*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
abstractsemantics = ["*.yaml", "*.yml"]
